reformatted dates, removed 11/2024 from NVDA1.csv

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,15 +17,15 @@
     "did you get your data? What question looked interesting given the data you chose? This\n",
     "section should be between 150-500 words\n",
     "\n",
-    "In recent days, Nvidia stock prices have skyrocketed. I wanted to see if their consumer GPU marketshare can be attributed to their stock prices going up.\n",
+    "In recent times, Nvidia stock prices have skyrocketed massively. Because Nvidia's business sector closest to consumers is selling discrete graphics cards, I wanted to see if their consumer GPU marketshare can be linked to their stock prices going up.\n",
     "\n",
-    "The time period observed will be October 2024, to November 2019. Chosen as the latest steam hardware survery data was last updated for October 2024, and last full month of stock trading (november not finished yet).\n",
+    "The time period observed will be October 2024, to November 2019. This time period was chosen as the latest steam hardware survery data was last updated for October 2024.\n",
     "\n",
     "The data was collected from Marketwatch; https://www.marketwatch.com/investing/stock/amd/download-data?startDate=11/15/2019&endDate=11/15/2020 , and the steam hardware survery, found in CSV format here: https://github.com/jdegene/steamHWsurvey\n",
     "\n",
     "Unfortunately, the steam hardware survey does not report total participants, rather only percentages. This means that the comparison will have to be made between marketshare dominance (compared to Intel and AMD) and stock prices, rather than just GPU units compared to stock price.\n",
     "\n",
-    "Spikes can be attributed 20/16 series launch, 30 series launch, 40 series launch, AMD 5XXX series 6XXX series, 7XXX series"
+    "Spikes in marketshare can be positively attributed 20/16 series launch, 30 series launch, 40 series launch, and negatively attributed to AMD 5XXX series 6XXX series, 7XXX series"
    ]
   },
   {
@@ -37,74 +37,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       date  percentage\n",
-      "0   2019-11      0.6919\n",
-      "1   2019-12      0.6935\n",
-      "2   2020-01      0.6921\n",
-      "3   2020-02      0.6861\n",
-      "4   2020-03      0.6804\n",
-      "5   2020-04      0.6680\n",
-      "6   2020-05      0.6621\n",
-      "7   2020-06      0.6744\n",
-      "8   2020-07      0.6785\n",
-      "9   2020-08      0.6786\n",
-      "10  2020-09      0.6776\n",
-      "11  2020-10      0.6766\n",
-      "12  2020-11      0.6822\n",
-      "13  2020-12      0.7219\n",
-      "14  2021-01      0.6856\n",
-      "15  2021-02      0.6914\n",
-      "16  2021-03      0.6961\n",
-      "17  2021-04      0.7009\n",
-      "18  2021-05      0.6965\n",
-      "19  2021-06      0.7060\n",
-      "20  2021-07      0.6916\n",
-      "21  2021-08      0.7142\n",
-      "22  2021-09      0.7033\n",
-      "23  2021-10      0.6952\n",
-      "24  2021-11      0.6988\n",
-      "25  2021-12      0.7064\n",
-      "26  2022-01      0.6973\n",
-      "27  2022-02      0.7067\n",
-      "28  2022-03      0.7168\n",
-      "29  2022-04      0.7073\n",
-      "30  2022-05      0.7214\n",
-      "31  2022-06      0.7062\n",
-      "32  2022-07      0.7395\n",
-      "33  2022-08      0.7085\n",
-      "34  2022-09      0.7218\n",
-      "35  2022-10      0.7357\n",
-      "36  2022-11      0.7057\n",
-      "37  2022-12      0.7031\n",
-      "38  2023-01      0.6936\n",
-      "39  2023-02      0.7105\n",
-      "40  2023-03      0.8030\n",
-      "41  2023-04      0.7100\n",
-      "42  2023-05      0.7104\n",
-      "43  2023-06      0.7078\n",
-      "44  2023-07      0.6882\n",
-      "45  2023-08      0.7029\n",
-      "46  2023-09      0.7237\n",
-      "47  2023-10      0.7699\n",
-      "48  2023-11      0.7015\n",
-      "49  2023-12      0.6897\n",
-      "50  2024-01      0.6958\n",
-      "51  2024-02      0.7226\n",
-      "52  2024-03      0.7246\n",
-      "53  2024-04      0.7208\n",
-      "54  2024-05      0.7608\n",
-      "55  2024-06      0.7172\n",
-      "56  2024-07      0.7162\n",
-      "57  2024-08      0.7215\n",
-      "58  2024-09      0.7336\n",
-      "59  2024-10      0.9506\n"
+      "          Date  Marketshare Percentage\n",
+      "0   2019-11-01                  0.6919\n",
+      "1   2019-12-01                  0.6935\n",
+      "2   2020-01-01                  0.6921\n",
+      "3   2020-02-01                  0.6861\n",
+      "4   2020-03-01                  0.6804\n",
+      "5   2020-04-01                  0.6680\n",
+      "6   2020-05-01                  0.6621\n",
+      "7   2020-06-01                  0.6744\n",
+      "8   2020-07-01                  0.6785\n",
+      "9   2020-08-01                  0.6786\n",
+      "10  2020-09-01                  0.6776\n",
+      "11  2020-10-01                  0.6766\n",
+      "12  2020-11-01                  0.6822\n",
+      "13  2020-12-01                  0.7219\n",
+      "14  2021-01-01                  0.6856\n",
+      "15  2021-02-01                  0.6914\n",
+      "16  2021-03-01                  0.6961\n",
+      "17  2021-04-01                  0.7009\n",
+      "18  2021-05-01                  0.6965\n",
+      "19  2021-06-01                  0.7060\n",
+      "20  2021-07-01                  0.6916\n",
+      "21  2021-08-01                  0.7142\n",
+      "22  2021-09-01                  0.7033\n",
+      "23  2021-10-01                  0.6952\n",
+      "24  2021-11-01                  0.6988\n",
+      "25  2021-12-01                  0.7064\n",
+      "26  2022-01-01                  0.6973\n",
+      "27  2022-02-01                  0.7067\n",
+      "28  2022-03-01                  0.7168\n",
+      "29  2022-04-01                  0.7073\n",
+      "30  2022-05-01                  0.7214\n",
+      "31  2022-06-01                  0.7062\n",
+      "32  2022-07-01                  0.7395\n",
+      "33  2022-08-01                  0.7085\n",
+      "34  2022-09-01                  0.7218\n",
+      "35  2022-10-01                  0.7357\n",
+      "36  2022-11-01                  0.7057\n",
+      "37  2022-12-01                  0.7031\n",
+      "38  2023-01-01                  0.6936\n",
+      "39  2023-02-01                  0.7105\n",
+      "40  2023-03-01                  0.8030\n",
+      "41  2023-04-01                  0.7100\n",
+      "42  2023-05-01                  0.7104\n",
+      "43  2023-06-01                  0.7078\n",
+      "44  2023-07-01                  0.6882\n",
+      "45  2023-08-01                  0.7029\n",
+      "46  2023-09-01                  0.7237\n",
+      "47  2023-10-01                  0.7699\n",
+      "48  2023-11-01                  0.7015\n",
+      "49  2023-12-01                  0.6897\n",
+      "50  2024-01-01                  0.6958\n",
+      "51  2024-02-01                  0.7226\n",
+      "52  2024-03-01                  0.7246\n",
+      "53  2024-04-01                  0.7208\n",
+      "54  2024-05-01                  0.7608\n",
+      "55  2024-06-01                  0.7172\n",
+      "56  2024-07-01                  0.7162\n",
+      "57  2024-08-01                  0.7215\n",
+      "58  2024-09-01                  0.7336\n",
+      "59  2024-10-01                  0.9506\n"
      ]
     }
    ],
@@ -142,6 +142,12 @@
     "# Convert period to a string representation for easier handling\n",
     "nvidia_marketshare['date'] = nvidia_marketshare['date'].astype(str)\n",
     "\n",
+    "#add day to YYYY-MM\n",
+    "nvidia_marketshare['date'] = nvidia_marketshare['date'] + '-01'\n",
+    "\n",
+    "#change 'date' to 'Date' and 'percentage' to 'Marketshare Percentage'\n",
+    "nvidia_marketshare.columns = ['Date', 'Marketshare Percentage']\n",
+    "\n",
     "# Save NVIDIA market share data to a new CSV file if needed\n",
     "nvidia_marketshare.to_csv('nvidia_marketshare.csv', index=False)\n",
     "\n",
@@ -151,27 +157,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Date    Open    High     Low   Close          Volume\n",
-      "0   11/2024  134.70  149.77  134.57  141.98   2,197,686,188\n",
-      "1   10/2024  121.77  144.42  115.14  132.76   5,628,704,705\n",
-      "2   09/2024  116.01  127.67  100.95  121.44   6,270,527,952\n",
-      "3   08/2024  117.53  131.26   90.69  119.37   8,105,367,751\n",
-      "4   07/2024  123.47  136.15  102.54  117.02   6,407,092,844\n",
-      "..      ...     ...     ...     ...     ...             ...\n",
-      "8   03/2020    6.92    7.12    4.52    6.59  15,777,535,522\n",
-      "9   02/2020    5.89    7.91    5.89    6.75  11,855,193,681\n",
-      "10  01/2020    5.97    6.49    5.78    5.91   6,132,787,699\n",
-      "11  12/2019    5.41    6.05    5.01    5.88   6,572,843,654\n",
-      "12  11/2019    5.24    5.54    5.02    5.42   4,281,434,917\n",
-      "\n",
-      "[61 rows x 6 columns]\n"
+      "         Date  Stock Price\n",
+      "12 2019-11-01         5.24\n",
+      "11 2019-12-01         5.41\n",
+      "10 2020-01-01         5.97\n",
+      "9  2020-02-01         5.89\n",
+      "8  2020-03-01         6.92\n",
+      "7  2020-04-01         6.39\n",
+      "6  2020-05-01         7.11\n",
+      "5  2020-06-01         8.83\n",
+      "4  2020-07-01         9.52\n",
+      "3  2020-08-01        10.73\n",
+      "2  2020-09-01        13.48\n",
+      "1  2020-10-01        13.76\n",
+      "0  2020-11-01        12.66\n",
+      "11 2020-12-01        13.49\n",
+      "10 2021-01-01        13.10\n",
+      "9  2021-02-01        13.05\n",
+      "8  2021-03-01        13.88\n",
+      "7  2021-04-01        13.57\n",
+      "6  2021-05-01        15.13\n",
+      "5  2021-06-01        16.27\n",
+      "4  2021-07-01        20.13\n",
+      "3  2021-08-01        19.70\n",
+      "2  2021-09-01        22.49\n",
+      "1  2021-10-01        20.75\n",
+      "0  2021-11-01        25.65\n",
+      "11 2021-12-01        33.22\n",
+      "10 2022-01-01        29.82\n",
+      "9  2022-02-01        25.10\n",
+      "8  2022-03-01        24.29\n",
+      "7  2022-04-01        27.38\n",
+      "6  2022-05-01        18.54\n",
+      "5  2022-06-01        18.72\n",
+      "4  2022-07-01        14.90\n",
+      "3  2022-08-01        18.18\n",
+      "2  2022-09-01        14.21\n",
+      "1  2022-10-01        12.35\n",
+      "0  2022-11-01        13.81\n",
+      "11 2022-12-01        17.00\n",
+      "10 2023-01-01        14.85\n",
+      "9  2023-02-01        19.69\n",
+      "8  2023-03-01        23.19\n",
+      "7  2023-04-01        27.51\n",
+      "6  2023-05-01        27.84\n",
+      "5  2023-06-01        38.49\n",
+      "4  2023-07-01        42.52\n",
+      "3  2023-08-01        46.46\n",
+      "2  2023-09-01        49.76\n",
+      "1  2023-10-01        44.03\n",
+      "0  2023-11-01        40.88\n",
+      "10 2023-12-01        46.53\n",
+      "9  2024-01-01        49.24\n",
+      "8  2024-02-01        62.10\n",
+      "7  2024-03-01        80.00\n",
+      "6  2024-04-01        90.30\n",
+      "5  2024-05-01        85.08\n",
+      "4  2024-06-01       113.62\n",
+      "3  2024-07-01       123.47\n",
+      "2  2024-08-01       117.53\n",
+      "1  2024-09-01       116.01\n",
+      "0  2024-10-01       121.77\n"
      ]
     }
    ],
@@ -190,15 +243,118 @@
     "\n",
     "nvda = pd.concat([nvda1, nvda2, nvda3, nvda4, nvda5])\n",
     "\n",
-    "#Novembers are recorded twice. Remove the first november at it is not measured at the correct day.\n",
-    "#example:\n",
-    "#11/2023,49.94,50.55,46.42,46.77,\"5,023,731,040\"\n",
-    "#11/2023,40.88,49.96,40.87,48.89,\"4,601,516,714\"\n",
+    "#Remove high, low, close, volume rows. Only open is relevant because it matches the most closely to the SHS measurement dates\n",
+    "nvda = nvda[['Date', 'Open']]\n",
+    "\n",
+    "#Rename 'Open' to 'Stock Price'\n",
+    "nvda = nvda.rename(columns={'Open': 'Stock Price'})\n",
+    "\n",
+    "\n",
+    "#Add /01 to date (MM/YYYY to MM/DD/YYYY)\n",
+    "nvda['Date'] = nvda['Date'].apply(lambda x: f\"{x.split('/')[0]}/01/{x.split('/')[1]}\") #chatgpt\n",
+    "\n",
+    "#make year first (MM/DD/YYYY to YYYY/MM/DD)\n",
+    "nvda['Date'] = pd.to_datetime(nvda['Date'])\n",
+    "\n",
+    "#sort in ascending order\n",
+    "\n",
+    "nvda = nvda.sort_values(by='Date')\n",
     "\n",
     "#save as nvda-final.csv\n",
     "nvda.to_csv('NVDA-Final.csv', index=False)\n",
     "\n",
     "print(nvda)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Date  Stock Price  Marketshare Percentage\n",
+      "0  2019-11-01         5.24                  0.6919\n",
+      "1  2019-12-01         5.41                  0.6935\n",
+      "2  2020-01-01         5.97                  0.6921\n",
+      "3  2020-02-01         5.89                  0.6861\n",
+      "4  2020-03-01         6.92                  0.6804\n",
+      "5  2020-04-01         6.39                  0.6680\n",
+      "6  2020-05-01         7.11                  0.6621\n",
+      "7  2020-06-01         8.83                  0.6744\n",
+      "8  2020-07-01         9.52                  0.6785\n",
+      "9  2020-08-01        10.73                  0.6786\n",
+      "10 2020-09-01        13.48                  0.6776\n",
+      "11 2020-10-01        13.76                  0.6766\n",
+      "12 2020-11-01        12.66                  0.6822\n",
+      "13 2020-12-01        13.49                  0.7219\n",
+      "14 2021-01-01        13.10                  0.6856\n",
+      "15 2021-02-01        13.05                  0.6914\n",
+      "16 2021-03-01        13.88                  0.6961\n",
+      "17 2021-04-01        13.57                  0.7009\n",
+      "18 2021-05-01        15.13                  0.6965\n",
+      "19 2021-06-01        16.27                  0.7060\n",
+      "20 2021-07-01        20.13                  0.6916\n",
+      "21 2021-08-01        19.70                  0.7142\n",
+      "22 2021-09-01        22.49                  0.7033\n",
+      "23 2021-10-01        20.75                  0.6952\n",
+      "24 2021-11-01        25.65                  0.6988\n",
+      "25 2021-12-01        33.22                  0.7064\n",
+      "26 2022-01-01        29.82                  0.6973\n",
+      "27 2022-02-01        25.10                  0.7067\n",
+      "28 2022-03-01        24.29                  0.7168\n",
+      "29 2022-04-01        27.38                  0.7073\n",
+      "30 2022-05-01        18.54                  0.7214\n",
+      "31 2022-06-01        18.72                  0.7062\n",
+      "32 2022-07-01        14.90                  0.7395\n",
+      "33 2022-08-01        18.18                  0.7085\n",
+      "34 2022-09-01        14.21                  0.7218\n",
+      "35 2022-10-01        12.35                  0.7357\n",
+      "36 2022-11-01        13.81                  0.7057\n",
+      "37 2022-12-01        17.00                  0.7031\n",
+      "38 2023-01-01        14.85                  0.6936\n",
+      "39 2023-02-01        19.69                  0.7105\n",
+      "40 2023-03-01        23.19                  0.8030\n",
+      "41 2023-04-01        27.51                  0.7100\n",
+      "42 2023-05-01        27.84                  0.7104\n",
+      "43 2023-06-01        38.49                  0.7078\n",
+      "44 2023-07-01        42.52                  0.6882\n",
+      "45 2023-08-01        46.46                  0.7029\n",
+      "46 2023-09-01        49.76                  0.7237\n",
+      "47 2023-10-01        44.03                  0.7699\n",
+      "48 2023-11-01        40.88                  0.7015\n",
+      "49 2023-12-01        46.53                  0.6897\n",
+      "50 2024-01-01        49.24                  0.6958\n",
+      "51 2024-02-01        62.10                  0.7226\n",
+      "52 2024-03-01        80.00                  0.7246\n",
+      "53 2024-04-01        90.30                  0.7208\n",
+      "54 2024-05-01        85.08                  0.7608\n",
+      "55 2024-06-01       113.62                  0.7172\n",
+      "56 2024-07-01       123.47                  0.7162\n",
+      "57 2024-08-01       117.53                  0.7215\n",
+      "58 2024-09-01       116.01                  0.7336\n",
+      "59 2024-10-01       121.77                  0.9506\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ensure the 'Date' column in both DataFrames is of the same type\n",
+    "nvda['Date'] = pd.to_datetime(nvda['Date'])  # Convert to datetime\n",
+    "nvidia_marketshare['Date'] = pd.to_datetime(nvidia_marketshare['Date'])  # Convert to datetime\n",
+    "\n",
+    "# Merge the two DataFrames on the 'Date' column\n",
+    "nvidia_analysis = pd.merge(nvda, nvidia_marketshare, on='Date', how='outer')\n",
+    "\n",
+    "# Sort by date after merging to maintain chronological order\n",
+    "nvidia_analysis = nvidia_analysis.sort_values(by='Date')\n",
+    "\n",
+    "# Save the combined DataFrame to a new CSV file\n",
+    "nvidia_analysis.to_csv('nvidia_analysis.csv', index=False)\n",
+    "\n",
+    "# Print the resulting combined DataFrame\n",
+    "print(nvidia_analysis)\n"
    ]
   }
  ],
