removed AMD Data

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examining relation between Nvidia stock prices and consumer hardware marketshare\n"
+    "# Does the Marketshare of Nvidia hardware relate to the stock price of the Nvidia Corporation?"
    ]
   },
   {
@@ -13,26 +13,17 @@
    "source": [
     "By Izaan Syed, 100922342\n",
     "\n",
-    "Provide the reader with some background on your question and data. Where\n",
-    "did you get your data? What question looked interesting given the data you chose? This\n",
-    "section should be between 150-500 words\n",
+    "In recent times, Nvidia stock prices have been in the news for skyrocketing massively. Nvidia as a company is known to most consumers as a gaming oriented company that produces graphics processing units that accelerate the rendering of video games. Because Nvidia's most consumer-direct business sector is selling discrete graphics cards, I wanted to see if their consumer GPU marketshare can be linked to their stock prices going up.\n",
     "\n",
-    "In recent times, Nvidia stock prices have skyrocketed massively. Because Nvidia's business sector closest to consumers is selling discrete graphics cards, I wanted to see if their consumer GPU marketshare can be linked to their stock prices going up.\n",
+    "The time period observed will be October 2024, to November 2019. This time period was chosen as I chose Valve's Steam hardware surey to measure GPU marketshare, and the latest steam hardware survey data was last updated for October 2024.\n",
     "\n",
-    "The time period observed will be October 2024, to November 2019. This time period was chosen as the latest steam hardware survery data was last updated for October 2024.\n",
+    "The stock market data data was collected from [Marketwatch](https://www.marketwatch.com/investing/stock/nvda)\n",
     "\n",
-    "The data was collected from Marketwatch; https://www.marketwatch.com/investing/stock/amd/download-data?startDate=11/15/2019&endDate=11/15/2020 , and the steam hardware survery, found in CSV format here: https://github.com/jdegene/steamHWsurvey\n",
+    "The GPU marketshare data was collected from the [Steam hardware survery](https://github.com/jdegene/steamHWsurvey)\n",
     "\n",
     "Unfortunately, the steam hardware survey does not report total participants, rather only percentages. This means that the comparison will have to be made between marketshare dominance (compared to Intel and AMD) and stock prices, rather than just GPU units compared to stock price.\n",
     "\n",
-    "Spikes in marketshare can be positively attributed 20/16 series launch, 30 series launch, 40 series launch, and negatively attributed to AMD 5XXX series 6XXX series, 7XXX series"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "stock split dates: 6/10/2024, 7/20/2021"
+    "The time period covered within this study includes many new releases of hardware, including Nvidia's 20/16 series launch, 30 series launch, 40 series launch, and AMD's 5XXX series, 6XXX series, and 7XXX series."
    ]
   },
   {
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +229,11 @@
     "import pandas as pd\n",
     "\n",
     "#combine NVDA1, NVDA2, NVDA3, NVDA4, NVDA5 csv files\n",
-    "\n",
     "nvda1 = pd.read_csv('NVDA1.csv')\n",
     "nvda2 = pd.read_csv('NVDA2.csv')\n",
     "nvda3 = pd.read_csv('NVDA3.csv')\n",
     "nvda4 = pd.read_csv('NVDA4.csv')\n",
     "nvda5 = pd.read_csv('NVDA5.csv')\n",
-    "\n",
     "nvda = pd.concat([nvda1, nvda2, nvda3, nvda4, nvda5])\n",
     "\n",
     "#Remove high, low, close, volume rows. Only open is relevant because it matches the most closely to the SHS measurement dates\n",
@@ -255,7 +244,7 @@
     "\n",
     "\n",
     "#Add /01 to date (MM/YYYY to MM/DD/YYYY)\n",
-    "nvda['Date'] = nvda['Date'].apply(lambda x: f\"{x.split('/')[0]}/01/{x.split('/')[1]}\") #chatgpt\n",
+    "nvda['Date'] = nvda['Date'].apply(lambda x: f\"{x.split('/')[0]}/01/{x.split('/')[1]}\") #chatgpt generated line\n",
     "\n",
     "#make year first (MM/DD/YYYY to YYYY/MM/DD)\n",
     "nvda['Date'] = pd.to_datetime(nvda['Date'])\n",
@@ -272,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,11 +332,11 @@
     }
    ],
    "source": [
-    "# Ensure the 'Date' column in both DataFrames is of the same type\n",
-    "nvda['Date'] = pd.to_datetime(nvda['Date'])  # Convert to datetime\n",
-    "nvidia_marketshare['Date'] = pd.to_datetime(nvidia_marketshare['Date'])  # Convert to datetime\n",
+    "# Ensure consistency in date\n",
+    "nvda['Date'] = pd.to_datetime(nvda['Date'])  \n",
+    "nvidia_marketshare['Date'] = pd.to_datetime(nvidia_marketshare['Date']) \n",
     "\n",
-    "# Merge the two DataFrames on the 'Date' column\n",
+    "# Merge both dataframes\n",
     "nvidia_analysis = pd.merge(nvda, nvidia_marketshare, on='Date', how='outer')\n",
     "\n",
     "# Sort by date after merging to maintain chronological order\n",
@@ -362,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -389,9 +378,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Plot the NVDA stock price over time\n",
-    "\n",
-    "\n",
+    "# Plot of the NVDA stock price over time\n",
     "plt.plot(nvidia_analysis['Date'], nvidia_analysis['Stock Price'], label='NVDA Stock Price', color='blue')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Stock Price')\n",
@@ -400,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -420,11 +407,7 @@
     "plt.plot(nvidia_analysis['Date'], nvidia_analysis['Marketshare Percentage'], label='NVIDIA Marketshare', color='green')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Percentage of Marketshare')\n",
-    "\n",
-    "#set scale from 0 - 100\n",
-    "\n",
     "plt.ylim(0, 100)\n",
-    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -504,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
