--- a/Untitled-1laptop.ipynb
+++ b/Untitled-1laptop.ipynb
@@ -469,17 +469,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion\n",
+    "**Discussion:**\n",
+    "-\n",
     "\n",
-    "Overall, the marketshare for Nvidia GPU's based on the steam hardware survey appears to be mostly consistent, staying between 65 and 80% for 4 years. This is expected as AMD, their main competitor for consumer GPU's, has remained at the same level of competitiveness in the market within the timespan graphed. There has been little innovation in the timespan. There has been a plethora of hardware releaess by both companies in this timeframe, \n",
+    "Overall, the marketshare for Nvidia GPU's based on the steam hardware survey appears to be mostly consistent, staying between 65% and 80% for 4 years. This is expected as AMD, their main competitor for consumer GPU's, has remained at the same level of competitiveness in the market within the timespan graphed. There has been a plethora of hardware releaess by both companies in this timeframe.\n",
     "\n",
-    "The stock prices for Nvidia however have skyrocketed in recent times. There was a small bump near 2022, attributed to the cryptocurrency mining boom of 2022. There was a huge skyrocket in 2024, related to the deep learning AI boom, which is lagely powered by Nvidia's CUDA technology and datacenter hardware.\n",
+    "The stock prices for Nvidia however have skyrocketed in recent times. There was a small bump near 2022, attributed to the cryptocurrency mining boom of 2022. There was a huge skyrocket in 2024, occuring in the same timeframe as the deep learning AI boom, which is largely powered by Nvidia's CUDA technology and datacenter hardware. \n",
     "\n",
-    "When plotting Nvidia Stock price against their consumer marketshare, it is shown that there is little correlation between stock price and their marketshare, despite their stock pricing shooting high disproportionately compared to their competitors in the market. The bumps in the stock prices in 2022 and 2024 and not reflected as an increase in consumer marketshare.\n",
+    "When plotting Nvidia Stock price against their consumer marketshare, it is shown that there is little correlation between stock price and their marketshare, despite their stock pricing shooting high disproportionately compared to their competitors in the market. The bumps in the stock prices in 2022 and 2024 and not reflected as an increase in consumer marketshare. \n",
     "\n",
-    "Therefore, it can be condluded that despite Nvidias branding and marketing being biased heavily towards gaming and personal entertainment, their largest market is actually with commercial compute acceleration.\n",
+    "This lack of correlation  suggests that Nvidia's growth and valuation are driven primarily by its dominance in industrial sectors, including high-performance computing, autonomous vehicles, data centers, and, most notably, artificial intelligence. \n",
     "\n",
-    "\n"
+    "In conclusion, while Nvidia's largest visible presence may be in consumer GPUs, its most significant and recent financial success comes instead from commercial and industrial applications.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**References:**\n",
+    "-"
    ]
   }
  ],
