--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -31,6 +31,7 @@
     "The time period observed will be November 2019, to September 2024. This time period includes many new releases of hardware, including Nvidia's 20/16 series launch, 30 series launch, 40 series launch, and AMD's 5XXX series, 6XXX series, and 7XXX series.\n",
     "\n",
     "---"
+    "Today, we will explore the price of Nvidia stock prices, making use of Pandas, Matplotlib and Numpy. I have no clue what is going on in this code, since I used chatGPT for all my work. please pray to god you understand." 
    ]
   },
   {
